[package]
name = "fsm"
version = "0.2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Maher Sallam <msallam@rocsys.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"

[features]
default = ["std"]
std = []
core_collections = []

[workspace]
members = ["fsm_codegen", "fsm_tests"]