[package]
name = "fsm_codegen"
version = "0.2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

[features]
default = ["viz"]
viz = []
viz_docs = []

[dependencies]
quote = "^0.3.10"
itertools = "0.5.8"
petgraph = "0.4.3"

[dependencies.syn]
version = "^0.10.6"
features = ["full", "parsing", "printing"]

[dependencies.fsm]
path = "../"
default-features = false

[lib]
proc-macro = true

