[package]
name = "fsm_codegen"
version = "0.4.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Maher Sallam <msallam@rocsys.com>"]
edition = "2018"

[features]
default = ["viz"]
viz = []
viz_docs = []

[dependencies]
quote = "^0.3.10"
itertools = "0.5.8"
petgraph = "0.4.3"

[dependencies.syn]
version = "^0.10.6"
features = ["full", "parsing", "printing"]

[dependencies.fsm]
path = "../"
version = "0.4.0"
registry = "rocsys-rust"
default-features = false
features = ["std"]

[lib]
proc-macro = true

