[package]
name = "fsm_tests"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
tokio = { version = "0.3.5", features = ["full"] }

fsm = { path = "../" }
fsm_codegen = { path = "../fsm_codegen/", features = ["viz", "viz_docs"] }
