[package]
name = "fsm_tests"
version = "0.2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Maher Sallam <msallam@rocsys.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.2.0", features = ["full"] }

fsm = { path = "../" }
fsm_codegen = { path = "../fsm_codegen/", default-features = false }
